--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ckeditor/ckeditor5-build-classic": "^32.0.0",
     "bootstrap-grid-only-css": "^4.1.3",
     "mat-video": "^2.8.1",
+    "ng2-search-filter": "^0.5.1",
     "ngx-ui-loader": "^13.0.0",
     "rxjs": "~6.6.0",
     "sweetalert2": "^11.0.18",
